# Rankalpha-Copy

./: .gitignore  .project  AGENTS.md  CODE_REVIEW.md  DOCKER_DEPLOYMENT.md  README.md  architecture.md  pyproject.toml  schema.sql  schema_mermaid.md  schemas.md  scope.md  sitecustomize.py
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/src/: cache.py  database.py  http_cache.py  main.py  request_logging.py  router_factory.py  schemas.py  settings.py
apps/api/src/routers/: ai_analysis.py  backtest.py  grading.py  pipeline.py  screener.py  signals.py  technicals.py
apps/common/: README.md  pyproject.toml
apps/common/src/: crud.py  logging.py  models.py  settings.py  technicals.py
apps/frontend/: .env.local  Dockerfile  README.md  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/components/: ai-analysis-detail.tsx  (+5 more)
apps/ingestion/: Dockerfile  README.md  pyproject.toml
apps/ingestion/src/: ingest_fundamentals.py  ingest_fundamentals_10q.py  ingest_fundamentals_yfin.py  ingest_nortgate_fundamental.py  main.py  metrics.py  synonyms.py
apps/scorer/: Dockerfile  README.md  pyproject.toml
apps/scorer/src/: main.py
apps/sentiment/: Dockerfile  README.md  main.py  mcp_agent.config.yaml  package-lock.json  package.json  pyproject.toml
apps/sentiment/src/: main.py  mcp_agent.config.yaml
apps/sentiment/src/llm/: evaluator_optimizer_llm.py  gpt5_planner_llm.py  gpt5_responses_planner_llm.py  gpt5_responses_planner_llm.py.bak  prompt_loader.py
apps/sentiment/src/prompts/: financial_analyst.md  orchestrator_task.md  report_writer.md  research_evaluator.md  search_finder.md
compose/: docker-compose.yml
docker/cache/: Dockerfile
docker/database/: Dockerfile
docker/database/init/: create-airflow-db.sql
docs/: frontend_plan.md
env/example/: airflow.env.example  api.env.example  cache.env.example  database.env.example  flyway.env.example  frontend.env.example  ingestion.env.example  sentiment.env.example
infra/airflow/: Dockerfile  README.md  pyproject.toml
infra/airflow/dags/: pipeline.py
infra/airflow/scripts/: trigger_dag_on_startup.py
infra/sftp/: sftp-init.sh
scripts/: clean_analysis_schedule.py  test-docker.sh
tests/: conftest.py
tests/common/: test_logging.py  test_models.py  test_settings.py
tests/scorer/: test_utils.py
tests/sentiment/: test_main.py
(+48 files in other folders)
