[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "python-multipart>=0.0.6",
    "numpy>=1.24.0",
    "common",
    "redis>=5.0.4",
]

[tool.uv.sources]
common = { path = "../common", editable = true }
