[project]
name = "sentiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
   "anthropic>=0.57.1",
   "jsonschema==4.20.0",
   "jsonschema-specifications>=2023.5.0,<2023.8.0",
   "mcp-agent>=0.1.6",
   "openai>=1.93.1",
   "openai-agents>=0.1.0",
   "pdfminer-six>=20250506",
   "playwright>=1.54.0",
   # Use prebuilt wheels to avoid local compilation issues on Ubuntu
   "psycopg2-binary==2.9.10",
   "pymupdf4llm>=0.0.27",
   "redis>=5.0.0",
]
